add orcha video (replace with hydrazine hacking when ready)

--- a/Updates.html
+++ b/Updates.html
@@ -90,7 +90,7 @@ window.onload = function() {
   </script>
   <div id="pattern"></div><!--Pattern to add some touch -->
   <div class="Header">
-  <img id="Noth1"src="img/header.png" width="495" height="76">
+  <img id="Noth1"src="img/header.png" width="495" height="100">
   </div>
   	<div class="typethewriter">
 	<h3 style="font-family: Inconsolata;">
@@ -113,12 +113,7 @@ window.onload = function() {
 	<div class="Update">
 		<div class="UpdateText"><h4><span style="color: #28de30">Latest</span> Updates (Date) <br>Release (version)</h4></div>
 		<p id="UpdateLog">
-		[<span style="color: #28de30">+</span>] Updates Coming Soon<br>
-    <!-- [<span style="color: #28de30">+</span>] Spammer (Constantly spam messages in chat)<br>
-    [<span style="color: #28de30">+</span>] Antibot (Detect bots and not attack them with Killaura)<br>
-    [<span style="color: #28de30">+</span>] InventoryCleaner (Throw stuff out of your inventory)<br>
-    [<span style="color: #28de30">+</span>] ClickTP (Teleport, finally)<br>
-    [<span style="color: #28de30">+</span>] ChestAura (Open chests around you)<br> -->
+    [<span style="color: #28de30">+</span>] Reach (Increase player reach in PvP)<br>
 		</p>
 	</div>
 	<br>
